@@ -167,6 +167,7 @@ void Launcher::removePlaceholderButton(const QString &desktopEntryPath)
         if (buttonForDesktopEntry->desktopEntry() == desktopEntryPath) {
             removeButtonPlacementFromStore(desktopEntryPath);
             removeLauncherButton(desktopEntryPath);
+            updateButtonPlacementsOnPage(page.data());
         }
     }
 }
@@ -241,30 +242,20 @@ void Launcher::addDesktopEntriesWithKnownPlacements(QList<QSharedPointer<Launche
     }
 }
 
-void Launcher::updateButtonPlacementsOnPage(LauncherPage *page, int firstIndex, int lastIndex)
+void Launcher::updateButtonPlacementsOnPage(LauncherPage *page)
 {
-    // get page number
-    int pageNum = 0;
-    foreach (const QSharedPointer<LauncherPage> &p, model()->launcherPages()) {
-        if (page == p) {
-            break;
-        }
-        pageNum++;
+    int pageNum = pageIndex(page);
+    if (pageNum < 0) {
+        return;
     }
 
-    if (firstIndex > lastIndex) {
-        int temp = lastIndex;
-        lastIndex = firstIndex;
-        firstIndex = temp;
+    QHash<QString, QString> newValues;
+    int position = 0;
+    foreach(const QSharedPointer<LauncherButton> &button, page->model()->launcherButtons()) {
+        QString entry = button->desktopEntry();
+        newValues.insert(entry, Placement(pageNum, position++).toString());
     }
-
-    if (firstIndex > -1) {
-        // update every button position between startPosition and endPosition
-        const QList< QSharedPointer<LauncherButton> > buttonsOnPage(page->model()->launcherButtons());
-        for (int i = firstIndex; i <= lastIndex && i < buttonsOnPage.count(); i++) {
-            dataStore->updateDataForDesktopEntry(buttonsOnPage.at(i)->desktopEntry(), Placement(pageNum, i).toString());
-        }
-    }
+    dataStore->updateDataForDesktopEntries(newValues);
 }
 
 void Launcher::addDesktopEntriesWithUnknownPlacements(QList<QSharedPointer<LauncherPage> > &pages)
@@ -373,25 +364,21 @@ void Launcher::removeLauncherButton(const QString &desktopEntryPath)
 {
     QList<QSharedPointer<LauncherPage> > pages = model()->launcherPages();
 
-    int pageIndex = 0;
     foreach (QSharedPointer<LauncherPage> page, pages) {
-        if (page->removeButton(desktopEntryPath)) {
+        int removedButtonPosition = page->launcherButtonPosition(desktopEntryPath);
+        if (removedButtonPosition > -1) {
+            page->removeButton(desktopEntryPath);
 
             QList<QSharedPointer<LauncherButton> > buttons = page->model()->launcherButtons();
             if (buttons.count() == 0) {
                 // remove empty page
                 pages.removeOne(page);
                 model()->setLauncherPages(pages);
-            } else if (dataStore != NULL) {
-                // Update new locations for other launcher buttons on page (when button is removed other buttons get shifted)
-                int buttonIndex = 0;
-                foreach (QSharedPointer<LauncherButton> button, buttons) {
-                    dataStore->updateDataForDesktopEntry(button->desktopEntry(), PLACEMENT_TEMPLATE.arg(pageIndex).arg(buttonIndex++));
-                }
+            } else {
+                updateButtonPlacementsOnPage(page.data());
             }
             break;
         }
-        pageIndex++;
     }
 }
 
@@ -471,6 +458,20 @@ void Launcher::updateButtonPlacementInStore(const QString &desktopEntryPath)
 void Launcher::removeButtonPlacementFromStore(const QString &desktopEntryPath)
 {
     dataStore->removeDataForDesktopEntry(desktopEntryPath);
+}
+
+int Launcher::pageIndex(LauncherPage *page)
+{
+    int pageNum = -1;
+    int index = 0;
+    foreach(const QSharedPointer<LauncherPage> &sharedPage, model()->launcherPages()) {
+        if (page == sharedPage.data()) {
+            pageNum = index;
+            break;
+        }
+        index++;
+    }
+    return pageNum;
 }
 
 Launcher::Placement::Placement() : page(-1), position(-1) {
