@@ -87,11 +87,7 @@ private slots:
     // Test removing buttons
     void testUpdatingButtonPlacementsOnPage();
     // Test moving buttons
-    void testMovingButtons();
-    // Test buttons moved with valid indexes
-    void testMovingButtonsWithValidIndexes();
-    // Test buttons not moved with invalid indexes
-    void testMovingButtonsWithInvalidIndexes();
+    void testWhenMovingButtonsThenNewPlacementsAreStored();
     // Test removing buttons
     void testRemovingButtons();
     // Test setting launcher to show first page
