@@ -1,6 +1,7 @@
 meegotouchhome (0.25.1~1) unstable; urgency=low
 
   * [UNRELEASED]
+  * Fixes: NB#251232 - Moving button in launcher produces noticeable lag
 
  -- Eetu Lehmusvuo <ext-eetu.6.lehmusvuo@nokia.com>  Fri, 22 Apr 2011 15:54:07 +0300
 
